[workspace]
members = ["programs/*", "sdk"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
// Update 3 at 2025-10-22 19:48:05
// Update 13 at 2025-10-18 07:12:21
// Update 34 at 2025-10-27 14:56:18
// Update 40 at 2025-10-03 00:33:25
// Update 46 at 2025-10-25 20:26:34
// Update 47 at 2025-10-01 04:52:44
// Update 49 at 2025-10-08 14:23:46
// Update 51 at 2025-09-29 00:10:04
// Update 55 at 2025-10-30 17:58:33
// Update 69 at 2025-10-18 19:19:40
// Update 70 at 2025-10-22 08:29:35
// Update 1 on 2025-11-04
// Update 2 on 2025-11-11
// Update 31 on 2025-11-05
// Update 35 on 2025-11-09
